put pages under construction

--- a/pages/code/sqlClassProj.html
+++ b/pages/code/sqlClassProj.html
@@ -39,8 +39,8 @@
         <!--intro-->
         <div class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
-                <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                <h3>Header</h3>
+                <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
+                <h3>Under Construction</h3>
                 <h4>...</h4>
             </div>
         </div>
@@ -85,11 +85,14 @@
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-4 mb-4 mb-md-0">
                     <h4>Follow Me</h4>
-                    <a href="https://www.linkedin.com/in/vilinhnguyen27/"><img class="icons"
-                            src="./assets/linkedin-icon.png" alt="linkedin" /></a>
-                    <a href="https://twitter.com/vilinh27"><img class="icons" src="./assets/twitter-icon.png"
+                    <a href="https://www.linkedin.com/in/vilinhnguyen27/">
+                        <img class="icons"
+                            src="../../assets/linkedin-icon.png" alt="linkedin" /></a>
+                    <a href="https://twitter.com/vilinh27">
+                        <img class="icons" src="../../assets/twitter-icon.png"
                             alt="twitter" /></a>
-                    <a href="https://www.instagram.com/linh_is_tibia/"><img class="icons" src="./assets/insta-icon.png"
+                    <a href="https://www.instagram.com/linh_is_tibia/">
+                        <img class="icons" src="../../assets/insta-icon.png"
                             alt="instagram" /></a>
                 </div>
             </div>
