--- a/pages/misc/rouynNorandaUxProj.html
+++ b/pages/misc/rouynNorandaUxProj.html
@@ -47,14 +47,26 @@
         <!--end of intro-->
 
         <!--project desc-->
-        <div class="container p-2 ">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-
+        <div id="project-desc" class="container p-2 ">
+            <div class="row " id="introcontent">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <p>
+        
+                    </p>
                 </div>
-
             </div>
-            <!--end of project desc-->
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="" alt="" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+        
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!--end of project desc-->
     </main>
     <!--end of main container-->
 
