add more to android page

--- a/pages/code/androidNotesApp.html
+++ b/pages/code/androidNotesApp.html
@@ -40,8 +40,8 @@
         <div class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
                 <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
-                <h3>Under Construction</h3>
-                <h4>...</h4>
+                <h3>Android Notes App</h3>
+                <h4>Learning more java but for mobile</h4>
             </div>
         </div>
         <!--end of intro-->
@@ -51,18 +51,36 @@
             <div class="row " id="introcontent">
                 <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
                     <p>
-                        
+                        I was taking an android development class to improve my
+                        java programming and this notes app was one of the projects
+                        we had to work on. Each project lasted two weeks.
+                    </p>
+                </div>
+            </div>
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/code/android-app.jpg" alt="mobile view" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                        This notes app would allow the user to make new 
+                        note pages and save them to the phone. It would
+                        also be persistent, meaning if the user got off the
+                        app and returned to it, the notes saved would still be there.
                     </p>
                 </div>
             </div>
             <div id="project-desc-block" class="row">
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                    <img src="" alt="" class="img-thumbnail">
+                    <img src="../../assets/code/android-code.jpg" alt="code view" class="img-thumbnail">
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <p class="ind-proj-text">
-
-                    </p>
+                        The persistence in the app was the biggest
+                        challenge because I had trouble visualizing 
+                        how the java code worked with the JSON code
+                        (since the notes data gets saved as JSON when persistent).                    </p>
                 </div>
             </div>
         </div>
