--- a/projects.html
+++ b/projects.html
@@ -164,7 +164,7 @@
                     <!--project 9-->
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
                         <a href="./pages/code/androidNotesApp.html">
-                            <img class="project-grid-item-img" src="" alt="Android notes app"/>
+                            <img class="project-grid-item-img" src="./assets/code/androidNotes-git.jpg" alt="Android notes app"/>
                             <div class="overlay">
                                     <div class="overlay-text">Android Notes App</div>
                             </div>
