adding more bits to android and sculpting page

--- a/pages/code/androidNotesApp.html
+++ b/pages/code/androidNotesApp.html
@@ -83,6 +83,18 @@
                         (since the notes data gets saved as JSON when persistent).                    </p>
                 </div>
             </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <p>
+                        The rest of the files for this project can be seen
+                        <a href="https://github.com/ViLinh27/android-notes">
+                            here
+                        </a>
+                         on my github. Overall I'm still proud of the work.
+                         I learned a lot from this class.
+                    </p>
+                </div>
+            </div>
         </div>
             <!--end of project desc-->
     </main>
