--- a/pages/misc/threeDSculpts.html
+++ b/pages/misc/threeDSculpts.html
@@ -124,6 +124,18 @@
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                 </div>
             </div>
+
+            <divid="project-desc-block" class="row">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <p>
+                        Other sculpting projects can seen on the sculpting website I had to make
+                        for this class 
+                        <a href="https://vilinh27.wixsite.com/3dsculpt">
+                            here
+                        </a>.
+                    </p>
+                </div>
+            </divid=>
         </div>
             <!--end of project desc-->
     </main>
