fix navbar styling ad add text to 3d sculpt page

--- a/pages/misc/threeDSculpts.html
+++ b/pages/misc/threeDSculpts.html
@@ -64,7 +64,9 @@
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <p class="ind-proj-text">
-                        skull
+                        This skull project was meant to get our feet wet after learning the ropes of the
+                        Zbrush software. One fundamental we had to learn was human anatomy so the skull was 
+                        the start of that learning process.
                     </p>
                 </div>
             </div>
@@ -97,6 +99,9 @@
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <p class="ind-proj-text">
+                        The torso project was a deeper dive in sculpting human anatomy.
+                        I chose the male torso as a bigger challenge to myself because it's
+                        not the most familiar territory for me.
                     </p>
                 </div>
             </div>
