adding to sql proj page and thumbnail

--- a/projects.html
+++ b/projects.html
@@ -185,7 +185,7 @@
                     <!--project 11-->
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
                         <a href="./pages/code/sqlClassProj.html">
-                            <img class="project-grid-item-img" src="" alt="SQL Class Projects" />
+                            <img class="project-grid-item-img" src="./assets/code/sql-proj-thumbnail.JPG" alt="SQL Class Projects" />
                             <div class="overlay">
                                     <div class="overlay-text">SQL Class Projects</div>
                             </div>
