--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
             </div>
             <!--resume button-->
             <div class="col-lg-12 col-md-12">
-                <button class="btn-primary">View Resume</button>
+                <button class="btn-primary"><a href="./assets/about/LNguyen_resume-2022.pdf">View Resume</a></button>
             </div>
         </div>
         <!--end of about me blurb-->
