adding top page buttons

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/./styling/sassStyles.css">
   </head>
   <body class="d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default" id="toppage">
       <!-- <div class="container-fluid"> -->
         <div class="navbar-header">
           <a class="navbar-brand" href="#">Vi-Linh Nguyen</a>
@@ -67,7 +67,8 @@
             <!--endo of animcontent-->
 
             <h5 class="home-intro-subtitle">
-              Scroll Down to see some featured projects
+              Scroll Down to see some featured projects.<br/>
+              Visit the Projects tab for more of my work.
             </h5>
           </div><!--main intro-->
 
@@ -153,7 +154,12 @@
         <!--end of row-->
       </div>
       <!--end of project grid-->
-      <h5>Visit the Projects tab for more of my work.</h5>
+
+      <!--back to top-->
+      <div id="back-to-top" class="col-lg-12 col-md-12 text-center">
+        <button class="btn-primary"><a href="#toppage">Back to Top</a></button>
+      </div>
+
     </main><!--end of main container-->
 
     <!--footer-->
