--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default" id="toppage">
         <!-- <div class="container-fluid"> -->
         <div class="navbar-header">
             <a class="navbar-brand" href="#">Vi-Linh Nguyen</a>
@@ -190,6 +190,11 @@
             <!--end of grid column-->
         </div>
         <!--end of cv / grid row-->
+
+        <!--back to top-->
+        <div id="back-to-top" class="col-lg-12 col-md-12 text-center">
+            <button class="btn-primary"><a href="#toppage">Back to Top</a></button>
+        </div>
     </main>
     <!--end of main container-->
 
