--- a/pages/code/storyPlanner.html
+++ b/pages/code/storyPlanner.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default" id="toppage">
         <!-- <div class="container-fluid"> -->
         <div class="navbar-header">
             <a class="navbar-brand" href="#">Vi-Linh Nguyen</a>
@@ -70,15 +70,20 @@
 
             </div>
 
-            <div id="project-desc-block" class="row">
+            <!-- <div id="project-desc-block" class="row">
                 <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
                     <h4>The process</h4>
                     <h5>Planning the pages out</h5>
                     <h5>Reference</h5>
                 </div>
-            </div>
+            </div> -->
 
             <!--end of project desc-->
+
+            <!--back to top-->
+            <div id="back-to-top" class="col-lg-12 col-md-12 text-center">
+                <button class="btn-primary"><a href="#toppage">Back to Top</a></button>
+            </div>
     </main>
     <!--end of main container-->
 
