--- a/pages/code/storyPlanner.html
+++ b/pages/code/storyPlanner.html
@@ -61,7 +61,7 @@
 
             <div class="row" id="project-desc-intro">
                 <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
-                    <p>
+                    <p class="ind-proj-text">
                         An old habit I had growing up, reading an irresponsible amount of comics, was making stories
                         that would play out in my head when I zoned out. The complete live site can be viewed
                         <a href="https://vilinh27.github.io/myStoryPlanner/">here</a>.
@@ -70,13 +70,36 @@
 
             </div>
 
-            <!-- <div id="project-desc-block" class="row">
+            <div id="project-desc-block" class="row">
                 <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
                     <h4>The process</h4>
-                    <h5>Planning the pages out</h5>
-                    <h5>Reference</h5>
+                    <p class="ind-proj-text">
+                        I had only just gotten back into basic web development
+                        after not touching it for several years, so I tried my
+                        best to plan things out the best I could at the time.
+                    </p>
                 </div>
-            </div> -->
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <h5>Planning the pages out</h5>
+                    <p class="ind-proj-text">
+                        I started off with basic skeletons for each story. Make a page with 
+                        just the necessities like a navigation bar and necessary sections for each 
+                        story. Those sections include characters, timeline and things like that.
+                        Don't forget to add each story blurb to the homepage. Once The skeletons are done
+                        then I can add the details of each story to get all the information about each story
+                        out of my head and down on paper.
+                    </p>
+                </div>
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <h5>Reference</h5>
+                    <p class="ind-proj-text">
+                        Most of the resources and information I used
+                        was from w3schools, which has great explanations
+                        of web development tools. Those range from the most basic
+                        html to frameworks like bootstrap.
+                    </p>
+                </div>
+            </div>
 
             <!--end of project desc-->
 
