--- a/pages/code/meetingDanteMoon.html
+++ b/pages/code/meetingDanteMoon.html
@@ -40,8 +40,8 @@
         <div class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
                 <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
-                <h3>Under Construction</h3>
-                <h4>...</h4>
+                <h3>Meeting Dante Moon</h3>
+                <h4>Trying out Twinery</h4>
             </div>
         </div>
         <!--end of intro-->
@@ -51,18 +51,58 @@
             <div class="row " id="introcontent">
                 <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
                     <p>
-        
+                        My sister is a fan of this artist and programmer and 
+                        she's been a huge inspiration in figuring what I wanted to do.
+                        One of the things she experimented with when creating games was
+                        a software called twinery, so I thought I'd try it out for myself.
                     </p>
                 </div>
             </div>
             <div id="project-desc-block" class="row">
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                    <img src="" alt="" class="img-thumbnail">
+                    <img src="../../assets/dante-twinery/D-default.png" alt="Dante face" class="img-responsive">
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <p class="ind-proj-text">
-        
+                        Twinery is a an open source software (and website) that 
+                        helps make fun " choose your own adventure " type of stories,
+                        or interactive fiction. Users can style their stories accordingly
+                        thanks to CSS, like your average web page.
                     </p>
+                    <p class="ind-proj-text">
+                        This story was part of a bigger one that has existed in my 
+                        head for years now. The characters can be found on my storyplanner
+                        website. I tried to keep this project simple because the point of it
+                        was to figure out twinery and try to make use of it.
+                    </p>
+                    <p class="ind-proj-text">
+                        The full game can be played in a browser
+                        <a href="https://linh-is-tibia.itch.io/meeting-dante-moon">
+                        here</a>.
+                    </p>
+                </div>
+            </div>
+
+            <h5>Assets</h5>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/dante-twinery/B-default.png" alt="Beatriz" class="img-responsive">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/dante-twinery/C-default.png" alt="Corbin" class="img-responsive">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="" alt="" class="img-responsive">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                 </div>
             </div>
         </div>
