add to dante moon story

--- a/pages/code/meetingDanteMoon.html
+++ b/pages/code/meetingDanteMoon.html
@@ -60,7 +60,7 @@
             </div>
             <div id="project-desc-block" class="row">
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                    <img src="../../assets/dante-twinery/D-default.png" alt="Dante face" class="img-responsive">
+                    <img id="twineryCharFace" src="../../assets/dante-twinery/D-default.png" alt="Dante face" class="img-responsive">
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <p class="ind-proj-text">
@@ -72,10 +72,12 @@
                     <p class="ind-proj-text">
                         This story was part of a bigger one that has existed in my 
                         head for years now. The characters can be found on my storyplanner
-                        website. I tried to keep this project simple because the point of it
-                        was to figure out twinery and try to make use of it.
+                        website. Although I am thinking of changing some of their
+                        names in the future. 
                     </p>
                     <p class="ind-proj-text">
+                        I tried to keep this project simple because the point of it
+                        was to figure out twinery and try to make use of it.
                         The full game can be played in a browser
                         <a href="https://linh-is-tibia.itch.io/meeting-dante-moon">
                         here</a>.
@@ -86,16 +88,69 @@
             <h5>Assets</h5>
             <div id="project-desc-block" class="row">
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                    <img src="../../assets/dante-twinery/B-default.png" alt="Beatriz" class="img-responsive">
+                    <img id="twineryCharFace" src="../../assets/dante-twinery/B-default.png" alt="Beatriz" class="img-responsive">
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                        This is the main character Beatriz. The user plays as her, and her job
+                        is to figure out the best choice to avoid any social hiccups when meeting
+                        the new house guest, Dante Moon.
+                    </p>
                 </div>
             </div>
             <div id="project-desc-block" class="row">
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                    <img src="../../assets/dante-twinery/C-default.png" alt="Corbin" class="img-responsive">
+                    <img id="twineryCharFace" src="../../assets/dante-twinery/C-default.png" alt="Corbin" class="img-responsive">
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                        Corbin is the older brother to Beatriz. He's a supporting 
+                        character in this story.
+                    </p>
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img id="twineryCharFace" src="../../assets/dante-twinery/Ev-default.png" alt="Everett" class="img-responsive">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                        Everett is the younger brother to Beatriz, another supporting
+                        character in this story.
+                    </p>
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img id="twineryCharFace" src="../../assets/dante-twinery/E-default.png" alt="Erdutza" class="img-responsive">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                        Erdutza is the mother of the Beatriz and her brothers
+                        in this story. She knows Dante and is the one that invited
+                        him over.
+                    </p>
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/dante-twinery/pexels-cottonbro-6832211.jpg" alt="fencing" class="img-responsive">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                        I used stock photos to indicate some semblance of setting for the characters. This one was for
+                        a fencing class mentioned in passing.
+                    </p>
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/dante-twinery/pexels-curtis-adams-5178068.jpg" alt="living room" class="img-responsive">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                        This stock photo was to indicate the bedroom Beatriz started the story in.
+                    </p>
                 </div>
             </div>
             <div id="project-desc-block" class="row">
@@ -103,6 +158,9 @@
                     <img src="" alt="" class="img-responsive">
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+            
+                    </p>
                 </div>
             </div>
         </div>
