--- a/projects.html
+++ b/projects.html
@@ -218,7 +218,7 @@
                     <!--project 14-->
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
                         <a href="./pages/code/meetingDanteMoon.html">
-                            <img class="project-grid-item-img" src="" alt="Meeting Dante Moon" />
+                            <img class="project-grid-item-img" src="./assets/dante-twinery/D-default.png" alt="Meeting Dante Moon" />
                             <div class="overlay">
                                     <div class="overlay-text">Meeting Dante Moon</div>
                             </div>
