--- a/pages/code/meetingDanteMoon.html
+++ b/pages/code/meetingDanteMoon.html
@@ -82,6 +82,10 @@
                         <a href="https://linh-is-tibia.itch.io/meeting-dante-moon">
                         here</a>.
                     </p>
+                    <p class="ind-proj-text">
+                        The image to the left here is an asset from the game of one of the main
+                        character: Dante Moon.
+                    </p>
                 </div>
             </div>
 
@@ -155,12 +159,19 @@
             </div>
             <div id="project-desc-block" class="row">
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                    <img src="" alt="" class="img-responsive">
+                    <img src="../../assets/dante-twinery/pexels-suzy-hazelwood-2382183.jpg" alt="door knob" class="img-responsive">
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <p class="ind-proj-text">
-            
+                        This stockc photo was to to show someone was at the front door.
                     </p>
+                </div>
+            </div>
+
+            <h5>Sounds</h5>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+
                 </div>
             </div>
         </div>
