--- a/pages/code/meetingDanteMoon.html
+++ b/pages/code/meetingDanteMoon.html
@@ -170,24 +170,24 @@
 
             <h5>Sounds</h5>
             <div id="project-desc-block" class="row">
-                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0 text-center">
                     <p>The sounds were all gathered from zapsplat.com</p>
                 </div>
-                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0 text-center">
                     <p>Door closing sound</p>
                     <audio controls>
                         <source src="../../assets/dante-sounds/zapsplat_household_front_door_heavy_wood_close_ext_001_67891.mp3">
                         Your browser does not support mp3 in audio tags.
                     </audio>
                 </div>
-                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0 text-center">
                     <p>Door opening sound</p>
                     <audio controls>
                         <source src="">
                         Your browser does not support mp3 in audio tags.
                     </audio>
                 </div>
-                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0 text-center">
                     <p>Game show buzzer sound</p>
                     <audio controls>
                         <source src="">
