add project text animation and styling

--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
 
         <!--custom css-->
         <link rel="stylesheet" type="text/css" href="./styling/styles.css">
+        <link rel="stylesheet" href="/./styling/sassStyles.css">
     </head>
 
     <body class="d-flex flex-column min-vh-100">
@@ -53,9 +54,46 @@
             <div class="row text-center">
                 <div class="col-lg-12 page-header">
                     <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                    <h3>
-                        Here's some stuff I worked on.
-                    </h3>
+
+                    <div class="decode-text">
+                        <div class="text-animation"><h3>H</h3></div>
+                        <div class="text-animation"><h3>e</h3></div>
+                        <div class="text-animation"><h3>r</h3></div>
+                        <div class="text-animation"><h3>e</h3></div>
+                        <div class="text-animation"><h3>'</h3></div>
+                        <div class="text-animation"><h3>s</h3></div>
+                        <div class="space"></div>
+
+                        <div class="text-animation"><h3>s</h3></div>
+                        <div class="text-animation"><h3>o</h3></div>
+                        <div class="text-animation"><h3>m</h3></div>
+                        <div class="text-animation"><h3>e</h3></div>
+                        <div class="space"></div>
+
+                        <div class="text-animation"><h3>s</h3></div>
+                        <div class="text-animation"><h3>t</h3></div>
+                        <div class="text-animation"><h3>u</h3></div>
+                        <div class="text-animation"><h3>f</h3></div>
+                        <div class="text-animation"><h3>f</h3></div>
+                        <div class="space"></div>
+
+                        <div class="text-animation"><h3>I</h3></div>
+                        <div class="space"></div>
+
+                        <div class="text-animation"><h3>w</h3></div>
+                        <div class="text-animation"><h3>o</h3></div>
+                        <div class="text-animation"><h3>r</h3></div>
+                        <div class="text-animation"><h3>k</h3></div>
+                        <div class="text-animation"><h3>e</h3></div>
+                        <div class="text-animation"><h3>d</h3></div>
+                        <div class="space"></div>
+
+                        <div class="text-animation"><h3>o</h3></div>
+                        <div class="text-animation"><h3>n</h3></div>
+                        <div class="text-animation"><h3>.</h3></div>
+
+                    </div>
+
                     <h4>Scroll down to see more or click one of the subnav tabs above.</h4>
                 </div>
             </div>
@@ -379,7 +417,7 @@
             </div>
         </div>
         <!--end of footer-->
-
+        <script src="./styling/basicEffects.js"></script>
     </body>
 
 </html>
