--- a/pages/code/portfolioOverhaul.html
+++ b/pages/code/portfolioOverhaul.html
@@ -128,7 +128,9 @@
             <p class="ind-proj-text">
                 Codepen.io provided some awesome ways to approach text animations to add more pizzazz
                 to this portfolio website. Plus I've learned that a little more interactivity like 
-                these text animations can help make the site look a little more professional.
+                these text animations can help make the site look a little more professional. I'm still
+                learning how to do this effectively, so there are a lot of people online to thank for the 
+                reference.
             </p>
             <p class="ind-proj-text">
                 The translation animation on the homepage header is thanks to this original project
@@ -141,6 +143,13 @@
                     here
                 </a>
                 .
+            </p>
+            <p class="ind-proj-text">
+                The text shuffle decode animation on the project page is thanks to this original project
+                by Ben Raclot. His codepen can be seen here:
+                <a href="https://codepen.io/BRacicot/pen/Nryjpa">
+                    here
+                </a>.
             </p>
         </div>
 
