--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
                     </div>
                     <div id="sitara">
                         <h6>
-                            Sitara Om, Chicago — Henna Artist/Cashier Jul 2019 2019 - Apr 2020
+                            Sitara Om, Chicago — Henna Artist/Cashier Jul 2019 - Apr 2020
                         </h6>
                         <ul>
                             <li>
