add some changes for animation

--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
 
     <!--custom css-->
     <link rel="stylesheet" type="text/css" href="./styling/styles.css">
+    <link rel="stylesheet" href="/./styling/sassStyles.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -236,7 +237,7 @@
         </div>
     </div>
     <!--end of footer-->
-
+    <script src="./styling/basicEffects.js"></script>
 </body>
 
 </html>
