--- a/pages/code/portfolioOverhaul.html
+++ b/pages/code/portfolioOverhaul.html
@@ -151,6 +151,11 @@
                     here
                 </a>.
             </p>
+            <p class="ind-proj-text">
+                My version can be seen here where I fiddled with it:
+                <a href="https://codepen.io/vilinh27/pen/rNJbNWe">here</a>.
+
+            </p>
         </div>
 
         <!--back to top-->
