add projects to cv, test out js theory

--- a/about.html
+++ b/about.html
@@ -123,7 +123,31 @@
                 <div id="projects">
                     <h5>Projects</h5>
                     <div>
-                        <h6>Church Website — Dec 2020 - Present</h6>
+                        <h6>Portfolio Site Overhaul — Jun 2022 - Present </h6>
+                        <ul>
+                            <li>Update website layout to display projects more efficiently
+                                with bigger emphasis on code.
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h6>SQL Class Projects - Jan 2022 - March 2022</h6>
+                        <ul>
+                            <li>Learn databases and how they work in the context of Oracle's 
+                                SQL developer software.
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h6>Android Notes App - September 2021 - November 2021</h6>
+                        <ul>
+                            <li>Implement Java principles in the context of Android development,
+                                to develop notes application.
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h6>Church Website — Dec 2020 - Februrary 2021</h6>
                         <ul>
                             <li>Build website for insitutution using design principles and markup languages
                         to learn how interactivity works on the web.</li>
