more codepen stuff
add in codepen styling. Effects are added too but something is not working with effects

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   
     <!--custom css-->
-    <link rel="stylesheet" type="text/css" href="./styling/styles.css">
+    <!--<link rel="stylesheet" type="text/css" href="./styling/styles.css">-->
     <link rel="stylesheet" href="/./styling/sassStyles.css">
 
     <!--icons-->
