--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
+    <meta charset="UTF-8">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
+    <title>Portfolio 2024-Linh Nguyen</title>
     <link rel="stylesheet" href="/./styling/sassStyles.css">
     <!--icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -721,9 +721,9 @@
       </div>
     </div>
     <!--end of footer-->
+    <!-- partial -->
+    <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/19.1.3/lazyload.min.js'></script>
     <script src="/basicEffects.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/19.1.3/lazyload.min.js"></script> -->
-    
   </body>
 </html>
