--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
       <div class="about-container">
         <div class="about-item">
           <p class="about-txt">
-            Hello! This Vi-Linh (pronounced VEE LIN WIN). Lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-            sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Hello! This Vi-Linh Nguyen (pronounced VEE LIN WIN). She is a DePaul University alumni with a degree in computer
+            science. Computer Science has offered her a flexibility that
+            satisfies the technical side of her brain into building sites
+            and apps for people to interact with. A bachelors in animation and a lifelong passion for art helps Vi-Linh 
+            understand the principles of visual appeal from a user perspective.
           </p>
           <p class="about-txt" id="about-email">
             <button class="modal-btn" href="#myModal-e">
