get rid of buggy project card for now

--- a/index.html
+++ b/index.html
@@ -52,16 +52,17 @@
       <!--end of project 7-->
       
       <!--Cartridge collector game-->
-      <div class="pcontainer" id=>
-        <div class="card" id="project8" onmouseenter="flipToBack(event,proj8text)" onmouseleave="flipToFront(event,proj8text)">
+     <!--  <div class="pcontainer">
+        <div class="card" id="project8" onmouseenter="flipToBack(event,proj8text)"
+          onmouseleave="flipToFront(event,proj7text)">
           <div class="is-active"></div>
           <div class="item_content" id="proj8text">
             <p class="item_title">Cartridge Collector</p>
-            <p class="item_description">This is a platformer game.</p>
+            <p class="item_description">This is a platformer game project</p>
             <button class="modal-btn" href="#myModal8">Click to explore more.</button>
           </div>
         </div>
-      </div>
+      </div> -->
       <!--end of project 8-->
 
       <!--Hell ghost game-->
@@ -69,9 +70,9 @@
         <div class="card" id="project9" onmouseenter="flipToBack(event,proj9text)" onmouseleave="flipToFront(event,proj9text)">
           <div class="is-active"></div>
           <div class="item_content" id="proj9text">
-            <p class="item_title"></p>
-            <p class="item_description"></p>
-            <button class="modal-btn" href=""></button>
+            <p class="item_title">Hell Ghost</p>
+            <p class="item_description">This is an endless runner game.</p>
+            <button class="modal-btn" href="">Click to explore more.</button>
           </div>
         </div>
       </div>
