--- a/index.html
+++ b/index.html
@@ -374,16 +374,43 @@
       <div class="modal-content">
         <div class="modal-header">
           <h2>Time To Talk</h2>
+          <h3>A short visual novel made in the Renpy game engine.</h3>
         </div>
         <div class="modal-body">
+          <figure class="mbc_container">           
+            <img src="/assets/timeToTalk-itchioCoverArtboard-1.png" alt="time to talk" class="modal-img"/>
+            <figcaption class="mbc_content">
+              Game Cover
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p class="">Game Cover</p>
+            </span>
+        
+          </figure>
+
           <figure class="mbc_container">
-            <h3>A short visual novel made in the Renpy game engine.</h3>
-            <!-- <img src="../../assets/timeToTalk-itchioCoverArtboard-1.png" alt="time to talk"/> -->
-            <p>My sister is a big visual novel fan, and told me about the renpy game engine. I've
-            only played a few visual novel games though.</p>
+            <img src="/assets/timeToTalkScreenshot01.jpeg" alt="time to talk" class="modal-img"/>
+            <figcaption class="mbc_content">
+              Game Screenshot
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p class="">Game Screenshot</p>
+            </span>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/timeToTalkScreenshot02.jpeg" alt="time to talk" class="modal-img"/>
+            <figcaption class="mbc_content">
+              Game Screenshot
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p class="">Game Screenshot</p>
+            </span>
+          </figure>
+        </div>
+        <div class="modal-footer">
             <p>More details and a downloadable version of the game can be seen on my itchio page
             <a href="https://linh-is-tibia.itch.io/time-to-talk">here</a>.</p>
-          </figure>
         </div>
       </div>
     </div>
