--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="item_content" id="proj9text">
             <p class="item_title">Hell Ghost</p>
             <p class="item_description">This is an endless runner game.</p>
-            <button class="modal-btn" href="">Click to explore more.</button>
+            <button class="modal-btn" href="#myModal9">Click to explore more.</button>
           </div>
         </div>
       </div>
@@ -378,18 +378,18 @@
         </div>
         <div class="modal-body">
           <figure class="mbc_container">           
-            <img src="/assets/timeToTalk-itchioCoverArtboard-1.png" alt="time to talk" class="modal-img"/>
+            <img src="https://img.itch.zone/aW1hZ2UvNzI2Nzk0LzQwMzczNTMuanBn/original/Vs8uti.jpg" alt="time to talk" class="modal-img"/>
             <figcaption class="mbc_content">
-              Game Cover
+              Game Screenshot
             </figcaption>
             <span class="mbc_content-hover">
-              <p class="">Game Cover</p>
+              <p class="">Game Screenshot</p>
             </span>
         
           </figure>
 
           <figure class="mbc_container">
-            <img src="/assets/timeToTalkScreenshot01.jpeg" alt="time to talk" class="modal-img"/>
+            <img src="https://img.itch.zone/aW1hZ2UvNzI2Nzk0LzQwMzczNTQuanBn/original/Mcwm%2Fj.jpg" alt="time to talk" class="modal-img"/>
             <figcaption class="mbc_content">
               Game Screenshot
             </figcaption>
@@ -399,7 +399,7 @@
           </figure>
 
           <figure class="mbc_container">
-            <img src="/assets/timeToTalkScreenshot02.jpeg" alt="time to talk" class="modal-img"/>
+            <img src="https://img.itch.zone/aW1hZ2UvNzI2Nzk0LzQwMzczNTUuanBn/original/3GrWrY.jpg" alt="time to talk" class="modal-img"/>
             <figcaption class="mbc_content">
               Game Screenshot
             </figcaption>
@@ -415,6 +415,41 @@
       </div>
     </div>
     <!--end of modal container-->
+    
+    <div class="modal" id="myModal9">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>HellGhost</h2>
+          <h3>An endless runner game made in Unity</h3>
+        </div>
+        <div class="modal-body">
+          <figure class="mbc_container">
+            <img src="https://img.itch.zone/aW1hZ2UvNzM1MDAwLzQwOTAwOTQuanBn/original/yapMgU.jpg" alt="" class="modal-img"/>
+            <figcaption class="mbc_content">
+              Game Screenshot
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p class="">Game Screenshot</p>
+            </span>
+          </figure>
+
+          <figure class="mbc_container">
+          <img src="" alt="" class="modal-img" />
+          <figcaption class="mbc_content">
+            Game Screenshot
+          </figcaption>
+          <span class="mbc_content-hover">
+            <p class="">Game Screenshot</p>
+          </span>
+          </figure>
+        </div>
+        <div class="modal-footer">
+          <p>More details and a downloadable version of the game can be seen on my itchio page
+            <a href="https://linh-is-tibia.itch.io/hellghost">here</a>.
+          </p>
+        </div>
+      </div><!--modal content-->
+    </div>
 
     <div class="modal" id="myModal1">
       <div class="modal-content">
