Adding some modal content

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
           <hr />
           <div class="cv-e_item">
             <div class="cv-e_school">
-              <h4>School name</h4>
-              <p>Degree</p>
+              <h4>DePaul University</h4>
+              <p>M.S. - Computer Science, Human Computer Interaction Concentration</p>
             </div>
             <div class="cv_Info">
               <p>Location</p>
@@ -406,6 +406,11 @@
             <span class="mbc_content-hover">
               <p class="">Game Screenshot</p>
             </span>
+          </figure>
+
+          <figure class="mbc_container">
+            <p>My sister is a big visual novel fan, and told me about the renpy game engine. I've
+            only played a few visual novel games though.</p>
           </figure>
         </div>
         <div class="modal-footer">
