--- a/index.html
+++ b/index.html
@@ -718,14 +718,14 @@
         </div>
         <!--end of modal header-->
         <div class="modal-body">
-          <div class="modal-body_itms">
-            <figure>
-              <img src="" alt="" class="modal-img" />
-              <figcaption class="mbc_content">
-                <p class="modal-body_txt">Original subject by</p>
-              </figcaption>
-            </figure>
-          </div>
+
+          <figure class="mbc_container">
+            <img src="" alt="" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p class="modal-body_txt">Original subject by</p>
+            </figcaption>
+          </figure>
+
         </div>
         <!--end of modalbody-->
         <div class="modal-footer">Modal footer</div>
