Added some stuff to the sql project modal

--- a/index.html
+++ b/index.html
@@ -720,9 +720,23 @@
         <div class="modal-body">
 
           <figure class="mbc_container">
-            <img src="" alt="" class="modal-img" />
+            <img src="/assets/code/relationalModel-SQLproj.JPG" alt="Relational model" class="modal-img" />
             <figcaption class="mbc_content">
-              <p class="modal-body_txt">Original subject by</p>
+              <p></p>
+            </figcaption>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/code/simpeSQLcode.JPG" alt="" class="modal-img"/>
+            <figcaption class="mbc_content">
+              <p></p>
+            </figcaption>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/code/intermediateSQLcode.JPG" alt="" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p></p>
             </figcaption>
           </figure>
 
