more modal content
android modal still acting weird. need to center

--- a/index.html
+++ b/index.html
@@ -655,6 +655,35 @@
           </figure>
 
           <figure class="mbc_container">
+            <p>
+              These projects were for a database course during my graduate studies. Learning databases were a
+              fundamentals course for my program. 
+            </p>
+            <p>
+              Repositories I've used for the database course:
+            </p>
+            <ol>
+              <li>
+                <a href="https://github.com/ViLinh27/RelationalModel">
+                  Relational Model
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/ViLinh27/SimpleSQL">
+                  Simple SQL</a></li>
+              <li>
+                <a href="https://github.com/ViLinh27/IntermediateSQL">
+                  Intermediate SQL</a></li>
+              <li>
+                <a href="https://github.com/ViLinh27/AdvancedSQL">
+                  Advanced SQL</a></li>
+              <li>
+                <a href="https://github.com/ViLinh27/MoreAdvancedSQL">
+                  More Advanced SQL</a></li>
+            </ol>
+          </figure>
+
+          <figure class="mbc_container">
             <img src="/assets/code/simpeSQLcode.JPG" alt="" class="modal-img"/>
             <figcaption class="mbc_content">
               <p></p>
@@ -670,7 +699,10 @@
 
         </div>
         <!--end of modalbody-->
-        <div class="modal-footer">Modal footer</div>
+        <div class="modal-footer">
+          I have more SQL projects on my github linked here: 
+          <a href="https://github.com/ViLinh27?tab=repositories&q=databases&type=&language=&sort=">CLICK</a>
+        </div>
         <!--end of modal footer-->
       </div>
       <!--end of modal content-->
@@ -797,9 +829,28 @@
 
     <div class="modal" id="myModal10"><!--android project-->
       <div class="modal-content">
-        <div class="modal-header"></div>
-        <div class="modal-body"></div>
-        <div class="modal-footer"></div>
+        <div class="modal-header">
+          <h2>Android Notes App</h2>
+        </div>
+        <div class="modal-body">
+          <figure class="mbc_container">
+            <img src="/assets/code/android-app.jpg" alt="screenshot" class="modal-img"/>
+            <figcaption class="mbc_content">
+              App Screenshot
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p class="">App Screenshot</p>
+            </span>
+          </figure>
+
+          <figure class="mbc_container">
+            <p>
+              This was a project made for an Android Development elective course during my graduate studies.
+            </p>
+          </figure>
+
+        </div>
+        <div class="modal-footer">Learning Android Development is a continuous journey.</div>
       </div>
     </div>
     
