new files for the rouyn project

--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
     <!--end of modal container-->
 
     <!--hell ghost game-->
-    <!-- <div class="modal" id="myModal9">
+<!--     <div class="modal" id="myModal9">
       <div class="modal-content">
         <div class="modal-header">
           <h2>HellGhost</h2>
@@ -884,9 +884,8 @@
             <a href="https://linh-is-tibia.itch.io/hellghost">here</a>.
           </p>
         </div>
-      </div> -->
-      <!--modal content-->
-    </div>
+      </div>
+    </div> -->
 
     <!--android project-->
     <div class="modal" id="myModal10">
@@ -967,10 +966,16 @@
              <a href="https://www.rouyn-noranda.ca">here</a>.
             </p>
             
-            <p>Below is the link to the proposal for the project to our professor.</p>
-            <a href="">
-              Read Proposal here.
-            </a>
+            <p>
+              Here, you can read the the proposal for the project to our professor: 
+              <a href="/assets/ux/proposal-draft.pdf">Proposal Draft</a>
+            </p>
+
+            <p>
+              The content inventory was meant to categorize the existing content of the website. You can read through it 
+              with this link:
+              <a href="/assets/ux/Rouyn-Content Inventory.pdf">Content Inventory</a>
+            </p>
 
           </figure>
       
