delivrables final draft ia project

--- a/index.html
+++ b/index.html
@@ -953,9 +953,10 @@
           <figure class="mbc_container">
             <img src="" alt="website screenshot" class="modal-img" />
             <figcaption class="mbc_content">
+              <p>Existing original website</p>
             </figcaption>
             <span class="mbc_content-hover">
-              <p class=""></p>
+              <p class="">Existing Original website</p>
             </span>
           </figure>
       
@@ -975,6 +976,12 @@
               The content inventory was meant to categorize the existing content of the website. You can read through it 
               with this link:
               <a href="/assets/ux/Rouyn-Content Inventory.pdf">Content Inventory</a>
+            </p>
+
+            <p>
+              The final draft of deliverables can be read in the provided link. It includes the testing results for card testing 
+              and what was included in the treejack tests:
+              <a href="/assets/ux/Group2-FinalProject_Deliverables.pdf">Deliverables</a>
             </p>
 
           </figure>
